# ChangeLog for kde-misc/kshutdown
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kshutdown/ChangeLog,v 1.40 2013/05/12 13:36:22 johu Exp $

*kshutdown-3.0_beta7 (12 May 2013)

  12 May 2013; Johannes Huber <johu@gentoo.org>
  +files/kshutdown-3.0_beta7-no-consolekit.patch, +kshutdown-3.0_beta7.ebuild,
  -kshutdown-3.0_beta4.ebuild:
  Version bump by David Heidelberger <david.heidelberger@ixit.cz>.

*kshutdown-3.0_beta4 (03 Aug 2012)

  03 Aug 2012; Johannes Huber <johu@gentoo.org> +kshutdown-3.0_beta4.ebuild,
  -kshutdown-3.0_beta3.ebuild, kshutdown-2.0.ebuild:
  Version bump by Nikos Chantziaras <realnc@gmail.com> wrt bug #429610. Remove
  old.

*kshutdown-3.0_beta3 (16 Mar 2012)

  16 Mar 2012; Johannes Huber <johu@gentoo.org> +kshutdown-3.0_beta3.ebuild:
  Version bump by Chris Reffet <geekboy72@gmail.com>. Fixes compilation with KDE
  4.8.

  29 Oct 2011; Jonathan Callen <abcd@gentoo.org> -kshutdown-2.0_beta12.ebuild:
  remove old

*kshutdown-2.0 (17 Jun 2011)

  17 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org> +kshutdown-2.0.ebuild:
  Version bump

*kshutdown-2.0_beta12 (16 Feb 2011)

  16 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -kshutdown-2.0_beta11.ebuild, +kshutdown-2.0_beta12.ebuild:
  Version bump.

  31 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  -kshutdown-2.0_beta10.ebuild:
  remove broken stable ebuild

  31 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  kshutdown-2.0_beta11.ebuild:
  Revert amd64 stable keyword

  31 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  kshutdown-2.0_beta11.ebuild:
  Stable on amd64 wrt bug #353317

  31 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  kshutdown-2.0_beta11.ebuild:
  EAPI3, remove old

*kshutdown-2.0_beta11 (20 Dec 2010)

  20 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -kshutdown-2.0_beta9.ebuild, kshutdown-2.0_beta10.ebuild,
  +kshutdown-2.0_beta11.ebuild: