@@ -1,21 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX kshutdown-3.0_beta7-no-consolekit.patch 1726 SHA256 cf81e87ed864fddc6305f75ac44e84cf6c64782b4360344b231dc78e5124c113 SHA512 06580231b5ceae08db1cfc338cbaf3b82c3e41e8aca88a17844769e7be068629c1e1af2256b9b4dee0fcced619c258afa1a446f25b0a012d1b758e195ceb69bc WHIRLPOOL 7386b6b3584574371c974ae70b6ffa581ccd0aacd1b6de253ce08b5462059d7a622da5627d08cc2f2a4d021b2f8d579f1e38766ab43facd1031ff89101429ce6
-DIST kshutdown-source-2.0.zip 522319 SHA256 31bb120a6191502a907258e5fa2eda1345d05662a208bcf75b9a1492b4a33625
-DIST kshutdown-source-3.0beta7.zip 420040 SHA256 5de50c532a9fd2e65706376232b7e641b05bbc5f54677f06d27bce0e0f9825ac SHA512 1cc56956e771ff67be720e7cb825469b13996b7aceed2caffe48c524b23b8b89dee41b77375afae08db08aad64492a18455832c1d774c4004185a41fcab17210 WHIRLPOOL 5076a70a98d36bf3455899dc9cb8924f7314d9e6d2bdbe6a13f424a43453a03b19493b22573719c645a9318793970780afef2c2a0ad44c8a86078e4a81a074d5
-EBUILD kshutdown-2.0.ebuild 700 SHA256 95a937edf8c5a84167d81beae2b8fe1ce86bc998a360badb77cb9915fae2b1a2 SHA512 8f90bd5029bc58e6e5b0ff9d0782f822f106d852cf5d9f252b67b76068947f9888d3dd635c12916c60fe2e8dff5266dd369fecb257c282ec6fcf497d4472ee5c WHIRLPOOL 297d2e3a6f5bc4cf1367fa723a2376b412ace6d156288560eb5f39c51f4d3bc8420538ec025706011f59135bf3c73a1222f11873c183d3a42c234ba01c32a50d
-EBUILD kshutdown-3.0_beta7.ebuild 774 SHA256 c40a9627e52596024b3a9605dc803a24a81c3835be9521a8a5fd4ce38991cc55 SHA512 10687c200f9b653187547f134be89bfc6968a31cb67ce9ca81fc6781cc431010c70d11132f8b23bb2a945a1f034d381e0d676e0043423350edae88329fdae757 WHIRLPOOL 75bddba2f4090b737fb53eddcb1819afe442e0890f3a1322bbb29f63ae34c1f798c104c983414113f90df83008254392bcaa2c637717ac531d83cc382878ba34
-MISC ChangeLog 5950 SHA256 c0dd61ccd9bf0aa7d822390aca0a43773e8011189e03a471a61531abaff714ea SHA512 1fdcded8d9d49a6f52703703a691a6df9d07a5e88353353ad6fe237046b33705d085bba5f3af623b06e486ecf0c8fbb0935cd0c645b4ae163233f688b1ca710b WHIRLPOOL f819c943808c4c5a478687e789588fd9c1db30dc76f02d423955299e238c0f8f1c18791402afe1a0d5d40be11e0bd2bc9e65034567a47b753a4bf0c5804ba76c
+DIST kshutdown-source-3.0beta8.zip 421807 SHA256 5b4242777943574e0607687af6e6270ff655f16612c8b35400a872de35c2a4bd SHA512 9f8de47fbe6c9be0d9cbfdf39ee53bd1de2e40bf37d5862ccff0fc38d84b30464f8df872174c494aa0853a766dc5a7e455f9033478f5cbc08dbb5ea6322e9a4f WHIRLPOOL 6f21e528adc900d98e629424c15c8bd2efed9d7a55eb46203e7d7db91d81c4d072858de0f1f4ee58d85ce94be21dd98f1cd8ae1e03692d6230dc23976237d8e3
+EBUILD kshutdown-3.0_beta8.ebuild 727 SHA256 c6bb6dcf70837c63cef03934f57df2513c0f107cb78196c0bf4220add0bea73e SHA512 4cf8a6b485be0ec363e2c7c0dbe1297d2b6fa9447c895717da008b5a811bc8bfc3aefd5052e959198d9acd2c2a0f99bb774a7d89743c64b8fe89043ce43d8d4a WHIRLPOOL 2ffdcb78574a4b48009f8b8554c3b28696db9d5681f61c253980f118d6da3c1b3381c345c30f5dda4f779f329331149279bd362692e6231704d564ee84ee5d09
+MISC ChangeLog 6284 SHA256 318cc2dcb4f0bb8628857fb68a56262a16f41bc4ba7bb8eafe350c41bb292cd3 SHA512 3adfd58d6944a894fe4aa4d0778c4bfeded7c25b1cdcbd238cd2db83898481fee1969fa8a1c426fad406b22a702961b979d72248ca0e91c4883b5f39a6ab66c2 WHIRLPOOL e6a57e88a26f9cda97086dd6425da0d8761810e044dc3cdea1905b8b1079e5d3c0ec7f3419e1e68ef68be5e42a7f3260bd5f03ec44fbed832e46a6d213b80c3c
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRj5riAAoJEO+t9ga+3I3adwQH/3phNW5zBy8dfBwtPWoXzVmC
-XCkRKP1tSWgY2aS37d7oDB9Uv2dPtHWs3dHdKdQO0JxRpxpOqBOUPk0CShVuqyh5
-fRamMDcgH/O9+M9B9/Sf4AQSID/Pr/IsVkbF8kMC7KHsM2ZttRqWaJhAx4Te4W1u
-Kb5QAl9mHGSwLU7E3wb7pzeLJonLR64EZhTQk8QpK8+w6T4bvUA4hVgzGtnYYIfL
-6Qtqy6q24U693Sfug9yscTV3bDPA9Ec8QA2EQsqzElOQKVkBbLvOiNo4LEb+Xp9O
-2Hf4g5inbE3DOytDOVGR18dqS1rz88+OFCTPWCCYTw36IJ2AyYyty2rC8cKgi+E=
-=8MaC
+iQEcBAEBCAAGBQJRzw74AAoJEO+t9ga+3I3aFw4H/0E0r8Ol2d0wlAj9KT3kuFS0
+QJ1m39oqaa8xQcw/ci4skzT3Guf1SA2ug7y7TTa6q4S1B+3P8bSQBFO2xlmwHZCq
+rnHk+z9xMfGkYea6xzDcZZ6dRM1iD3D8HUfjisb3wYmrelglCYJw++zVITECOJd4
+qkIZQQ9OWUs4IyPOu9+EZykxxx2UXW0Fmt1KJz2RfSWDH2N+rHlNQL6/0cUu6MAc
+WpSKsiRcPWJ7gVHOtOdBqcMsbjtACRAjkGpSlEONwd4BeNh7p4wt3etV/NO3ditm
+9YshNYAh+SMR8u4pzIFOPruYgeHaYweXE4RHy1oYACOuem8nygTwqNazKzZkIJI=
+=PE3s
 -----END PGP SIGNATURE-----
